namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sagamba
  labels:
    name: sagamba
    environment: production
    app.kubernetes.io/part-of: sagamba
