efs-cleaner.yaml
apiVersion: v1
kind: Pod
metadata:
  name: rabbitmq-cleaner
  namespace: sagamba
spec:
  containers:
  - name: cleaner
    image: alpine
    command: ["sh", "-c", "rm -rf /data/* && sleep 3600"]
    volumeMounts:
    - mountPath: /data
      name: data
  volumes:
  - name: data
    persistentVolumeClaim:
      claimName: rabbitmq-pvc
  restartPolicy: Never
