postgres-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-public
  namespace: sagamba
spec:
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  selector:
    app: postgres
