pgadmin-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pgadmin-ingress
  namespace: sagamba
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: alb
  tls:
  - hosts:
    - pgadmin.savetoserve.rw
    secretName: pgadmin-tls
  rules:
  - host: pgadmin.savetoserve.rw
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pgadmin
            port:
              number: 80
